--- a/assignment1/knn.ipynb
+++ b/assignment1/knn.ipynb
@@ -742,7 +742,11 @@
     "$\\color{blue}{\\textit Your Answer: 1, 4}$\n",
     "\n",
     "\n",
-    "$\\color{blue}{\\textit Your Explanation: 보통 1-nn의 경우 모든 training data가 동일할 것이기 때문에 1-nn의 loss는 0이다.}$\n",
+    "$\\color{blue}{\\textit Your Explanation:\n",
+    "\n",
+    "1: 보통 1-nn의 경우 모든 training data가 동일할 것이기 때문에 1-nn의 loss는 0이다.}$\n",
+    "\n",
+    "4: training data의 크기가 늘어나면 그만큼 모델이 봐야할 것도 늘어나기 때문에 당연히 학습 시간도 증가하게된다.\n",
     "\n"
    ]
   },
